# clipper5-ntx-index

./: CMakeLists.txt
include/: NtxIndex.h
src/: NtxIndex.cpp  main.cpp
